PrepareMergeSupportForChangeFeedProcessor (#31428)
* Refactor changeFeedProcessor to prepare for merge support

Co-authored-by: annie-mac <annie-mac@annie-macs-MacBook-Pro.local>
Co-authored-by: annie-mac <annie-mac@DESKTOP-M86HBMH.redmond.corp.microsoft.com>